--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,12 @@ beautifulsoup4>=4.12.0
 lxml>=4.9.0
 pandas>=2.0.0
 
+# NLP dependencies
+spacy>=3.7.0
+tenacity>=8.0.0
+tqdm>=4.65.0
+ratelimit>=2.2.1
+
 # Development dependencies
 pytest>=7.4.0
 pytest-cov>=4.1.0
